--- a/src/index.css
+++ b/src/index.css
@@ -5,53 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #553055;
+  background: #553055;
 }
-
-/* app styles */
 .App {
-  background-color: #4c2a4c;
-  max-width: 700px;
+  background: #4c2a4c;
   margin: 20px auto;
-  text-align: center;
   width: 90%;
+  max-width: 700px;
   color: #eee;
 }
-
-nav {
-  padding: 5px;
-}
-
-nav ul {
-  padding: 0;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-/* .book-list {
-  padding: 20px;
-  margin-bottom: 20px;
-}
-.book-list ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-.book-list li {
-  padding: 10px;
-  margin: 10px auto;
-  border-radius: 10px;
-} */
-
 .navbar {
   padding: 10px 20px;
   text-align: center;
   background: #6d3d6d;
 }
-
 .navbar h1 {
   margin: 10px 0;
 }
@@ -59,12 +26,10 @@ nav ul li {
 .book-list {
   margin: 20px;
 }
-
 .book-list ul {
   padding: 0;
   list-style-type: none;
 }
-
 .book-list li {
   background: #6d3d6d;
   border-radius: 4px;
@@ -72,33 +37,27 @@ nav ul li {
   cursor: pointer;
   margin: 10px 0;
 }
-
 .book-list li:hover {
   opacity: 0.7;
   text-decoration: line-through;
 }
-
 .book-list .title {
   font-weight: bold;
   color: #fff;
   font-size: 1.2em;
 }
-
 .book-list .author {
   font-size: 0.9em;
   color: #ddd;
 }
-
 .empty {
   margin: 20px;
   text-align: center;
-  padding: 20px;
 }
 
 form {
   padding: 20px;
 }
-
 input[type='text'] {
   width: 100%;
   padding: 10px;
@@ -108,12 +67,10 @@ input[type='text'] {
   color: #fff;
   border: 0;
 }
-
-input[type='text'] {
+input[type='submit'] {
   margin: 10px auto;
   background: #eee;
   border: 0;
   padding: 6px 20px;
-  background: #3c1f3c;
   display: block;
 }
